Updated CI to use linux console (has g++ built in) References Issue #1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 buildLinux:
     tags:
         - linux
-        - cpp
+        - console
     stage: build
     script:
         - g++ ./ThreadQueue/test.cpp -o test.out
