Specified C++17  in CI build Removed hanging cin.get

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ buildLinux:
         - console
     stage: build
     script:
-        - g++ ./ThreadQueue/test.cpp -o test.out
+        - g++ -std=c++17 ./ThreadQueue/test.cpp -o test.out
     artifacts:
         paths:
             - test.out
